@@ -1,3 +1,6 @@
+april  4th, 2001 : Otto Bruggeman
+	Finally implemented the preferences menu... i still lack some nice icons for it
+	but that will be solved in the near future...
 march 25th, 2001 : Otto Bruggeman
 	Moved the application icons to the pics dir
 march 20th, 2001 : Otto Bruggeman
